# pyowt

./: .gitignore  README.md  pyproject.toml
owt/: channel.py  client.py  codec.py  common.py  constants.py  info.py  log.py  mediaformat.py  participant.py  portal_types.py  publication.py  quic.py  quic_types.py  sdputils.py  signaling.py  stream.py  sub_types.py  subscription.py  transport.py  utils.py  webrtc.py
owt/api/: auth.py
tests/integration/: test_integration.py  types.py
tests/integration/fixtures/: config.example.json
